--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-todo-header></app-todo-header>
-<app-todo-details></app-todo-details>
-<app-todo-list></app-todo-list>
+<div class="main">
+<button  routerLink="details">Todo Details</button>
+<button  routerLink="list">Todo List</button>
+<button  routerLink="spacex">SpaceX Mission</button>
+</div>
+<router-outlet></router-outlet>
